deploy - fix project title alignment

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -997,7 +997,7 @@ article.post .card-e {
   margin: 0 0 0 0;
 }
 .project-body .project-header {
-  margin: 4.5rem 18rem;
+  margin: 4.5rem 9rem;
 }
 @media screen and (max-width: 900px) {
   .project-body .project-header {
